Create endpoint update an delete to user data
